contact form submit button visibility issue fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -607,8 +607,9 @@ section {
               cursor: pointer;
               &:hover{
                 background-color: var(--color-secondary);
-                color:black;
+                color:var(--color-primary);
               }
+
               p{
                 margin-left: auto;
                 margin-right: auto;
